--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -27,11 +27,10 @@ jobs:
           run_install: true
           version: 9.12.1
 
-      - name: Compile CSS from SCSS files
-        uses: actions/sass-build@v0.6.0
-        with:
-          source: _scss/main.scss
-          destination: /tmp/repo-name/assets/css/main.css    
+      - name: sass install, build
+        run: |-
+          pnpm add -D sass
+        
 
 
       - name: 设置 Node.js
